[gd_scene load_steps=8 format=3 uid="uid://dliwbupvuedto"]

[ext_resource type="Script" uid="uid://bnesrl8ak5o86" path="res://scripts/read.gd" id="1_lyiot"]
[ext_resource type="Texture2D" uid="uid://bixxklrhp20xv" path="res://assets/svg/arrow-big-left-dash.svg" id="2_jmpur"]
[ext_resource type="Texture2D" uid="uid://dk7pcjep5qsbi" path="res://assets/svg/audio-lines.svg" id="3_bdpfe"]
[ext_resource type="Texture2D" uid="uid://pefe7ey6i7kp" path="res://assets/svg/audio-waveform.svg" id="3_boklx"]
[ext_resource type="Texture2D" uid="uid://wqw4s0klj2um" path="res://assets/svg/step-forward.svg" id="4_bdpfe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_boklx"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.176471, 0.192157, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3p3h"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.752941, 0.752941, 0.752941, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Control" type="Control" node_paths=PackedStringArray("prev_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lyiot")
prev_page = "uid://yy2bc4x6ej2v"
prev_button = NodePath("MarginContainer/Chapters/title/close")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.101961, 0.105882, 0.184314, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Chapters" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="title" type="HBoxContainer" parent="MarginContainer/Chapters"]
layout_mode = 2

[node name="close" type="Button" parent="MarginContainer/Chapters/title"]
layout_mode = 2
icon = ExtResource("2_jmpur")

[node name="NovelName" type="Label" parent="MarginContainer/Chapters/title"]
unique_name_in_owner = true
layout_mode = 2
text = "Novel name"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Chapters"]
layout_mode = 2

[node name="ChapterNum" type="Label" parent="MarginContainer/Chapters/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Chapter num"

[node name="autoplay" type="Button" parent="MarginContainer/Chapters/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "auto"
icon = ExtResource("3_boklx")

[node name="play" type="Button" parent="MarginContainer/Chapters/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
icon = ExtResource("3_bdpfe")

[node name="pause" type="Button" parent="MarginContainer/Chapters/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
icon = ExtResource("4_bdpfe")

[node name="body" type="VBoxContainer" parent="MarginContainer/Chapters"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Chapters/body"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="MarginContainer" type="PanelContainer" parent="MarginContainer/Chapters/body/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_boklx")

[node name="chapbody" type="VBoxContainer" parent="MarginContainer/Chapters/body/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Chapters/body"]
layout_mode = 2

[node name="prevbutton" type="Button" parent="MarginContainer/Chapters/body/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_u3p3h")
text = "   Prev   "

[node name="nextbutton" type="Button" parent="MarginContainer/Chapters/body/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
text = "Next"

[connection signal="toggled" from="MarginContainer/Chapters/HBoxContainer/autoplay" to="." method="_on_autoplay_toggled"]
[connection signal="toggled" from="MarginContainer/Chapters/HBoxContainer/play" to="." method="_on_play_toggled"]
[connection signal="pressed" from="MarginContainer/Chapters/HBoxContainer/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="MarginContainer/Chapters/body/HBoxContainer/prevbutton" to="." method="_on_prevbutton_pressed"]
[connection signal="pressed" from="MarginContainer/Chapters/body/HBoxContainer/nextbutton" to="." method="_on_nextbutton_pressed"]
